--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "slugify": "^1.6.5",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^8.35.0",
